Bug 615061 - Dispatch the hashchange event synchronously. r=smaug, a2.0=blocking